# nextagram_template

./: README.md  app.py  config.py  helpers.py  pyproject.toml  requirements.txt
instagram_web/: __init__.py
instagram_web/blueprints/donations/: views.py
instagram_web/blueprints/donations/templates/donations/: new.html  show.html
instagram_web/blueprints/follows/: views.py
instagram_web/blueprints/follows/templates/follows/: request.html
instagram_web/blueprints/images/: views.py
instagram_web/blueprints/sessions/: views.py
instagram_web/blueprints/users/: views.py
instagram_web/blueprints/users/templates/users/: account_privacy.html  edit_profile.html  home.html  profile_page.html  settings.html  signin.html  signup.html
instagram_web/helpers/: google_oauth.py
instagram_web/templates/: 404.html  500.html  _layout.html  home.html  settings.html  signin.html  signup.html
instagram_web/util/: assets.py
models/: __init__.py  donation.py  follow.py  image.py  user.py
