[tool.poetry]
name = "nextagram_template"
version = "0.1.0"
description = ""
authors = ["claudialyx <claudialyx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Authlib = "^0.10.0"
autopep8 = "^1.4"
boto3 = "^1.9"
botocore = "^1.12"
braintree = "^3.51"
certifi = "^2018.11"
chardet = "^3.0"
Click = "^7.0"
colorama = "^0.4.1"
cssmin = "^0.2.0"
docutils = "^0.14.0"
Flask = "^1.0"
Flask-Assets = "^0.12.0"
Flask-Cors = "^3.0"
Flask-Login = "^0.4.1"
Flask-WTF = "^0.14.2"
idna = "^2.8"
itsdangerous = "^1.1"
Jinja2 = "^2.10"
jmespath = "^0.9.4"
jsmin = "^2.2"
MarkupSafe = "^1.1"
peewee = "^3.8"
peewee-db-evolve = "^3.7"
psycopg2-binary = "^2.7"
pycodestyle = "^2.5"
python-dateutil = "^2.8"
python-dotenv = "^0.10.1"
requests = "^2.21"
s3transfer = "^0.2.0"
six = "^1.12"
urllib3 = "^1.24"
webassets = "^0.12.1"
Werkzeug = "^0.14.1"
wincertstore = "^0.2.0"
WTForms = "^2.2"
sendgrid = "^5.6"
flask_wtf = "^0.14.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
